force-app/main/default/objects/Case/fields/Case_Worker__c.field-meta.xml
<CustomField>
    <fullName>Case_Worker__c</fullName>
    <label>Case Worker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>이형석</fullName>
            </value>
            <value>
                <fullName>이호상</fullName>
            </value>
            <value>
                <fullName>전인범</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>