force-app/main/default/objects/Case/fields/First_Assign_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Assign_Time__c</fullName>
    <label>First Assign Time</label>
    <type>DateTime</type>
</CustomField>