force-app/main/default/objects/Case/fields/First_Comment_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Comment_Time__c</fullName>
    <label>First Comment Time</label>
    <type>DateTime</type>
</CustomField>