force-app/main/default/objects/Case/fields/realAutoWorkingTime__c.field-meta.xml
<CustomField>
    <fullName>realAutoWorkingTime__c</fullName>
    <label>realAutoWorkingTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>