force-app/main/default/objects/Case/fields/realManualWorkingTime__c.field-meta.xml
<CustomField>
    <fullName>realManualWorkingTime__c</fullName>
    <label>realManualWorkingTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>